Add material design styles

--- a/src/main.css
+++ b/src/main.css
@@ -3,6 +3,8 @@ body {
   margin: 0;
   text-align: center;
   color: #293c4b;
+  justify-content: center;
+  display: flex;
 }
 
 h1 {
@@ -12,4 +14,8 @@ h1 {
 img {
   margin: 20px 0;
   max-width: 200px;
+}
+
+#root {
+    width: 50%;
 }
